infra/manifests/argocd/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  namespace: argocd
  annotations:
    kubernetes.io/ingress.allow-http: "true"
    kubernetes.io/ingress.global-static-ip-name: spino-argo-static-ip-prod

    networking.gke.io/managed-certificates: argo-cert
    spec.ingressClassName: "gce"
spec:
  rules:
    - host: "argo.spino.kurichi.dev"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port: 
                  number: 80
